add env helper function

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "version": "vinxi version"
   },
   "dependencies": {
+    "@cloudflare/workers-types": "^4.20240821.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.1",
     "@solidjs/start": "^1.0.6",
     "autoprefixer": "^10.4.20",
+    "pocketbase": "^0.21.4",
     "postcss": "^8.4.41",
     "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.10",
